--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,40 @@
-dist: xenial
-
 language: java
-script: 
+# the following will skip the installation of dependencies.
+install: true
+
+script:
   - gradle clean build
-  - tar -zcf hello_world_test_reports.tar.gz build/reports
-  - tar -zcf hello_world_executable_distributions.tar.gz build/distributions
+  - tar -zcf hello_world_build.tar.gz build
+  - gradle dist --rerun-tasks
   - ls -R
+
 
 before_deploy:
   - git config --global user.email "builds@travis-ci.com"
   - git config --global user.name "Travis CI"
   - export GIT_TAG=$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER
-  - echo "Just generated GIT_TAG"
-  - echo $GIT_TAG
   - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
-  - git push -q https://$GITPERM@github.com/drlehr/Java_Gradle_Hello_World  --tags
+  - git push -q https://$GITPERM@github.com/drlehr/java-hello-world-with-gradle  --tags
   - ls -R
-  
+
 deploy:
-  provider: releases
+  skip_cleanup: true
+  overwrite: true
   file_glob: true
+  provider: releases
   api_key:
     secure: $GITPERM
-  file: 
+
+  file:
+    - "README.md"
+    - "build.gradle"
+    - ".travis.yml"
     - README.md
-    - hello_world_test_reports.tar.gz 
-    - hello_world_executable_distributions.tar.gz 
-  skip_cleanup: true
+    - dist/
+    - hello_world_build.tar.gz
+    - *.gz
+    - *
+
   on:
     tags: false
-  
+    all_branches: true
