--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ dist: xenial
 language: java
 install: true
 
-matrix:
-  include:
-    - jdk: oraclejdk9
+matrix: 
+  include: 
+  - jdk: oraclejdk9
 
-script:
+script: 
   - git config --global push.default simple
   - export GIT_TAG=$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER
   - gradle clean build
@@ -22,18 +22,18 @@ before_deploy:
   - export GIT_TAG=$TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER
   - echo "Just generated GIT_TAG for $TRAVIS_BRANCH.$TRAVIS_BUILD_NUMBER" >> $TRAVIS_BUILD_DIR/build.txt
   - git tag $GIT_TAG -a -m "Generated tag from TravisCI for build $TRAVIS_BUILD_NUMBER"
-  - git push -q https://$GITPERM@https://github.com/CS3398-Changelings-Aye/Java_Gradle_Hello_World --tags
+  - git push -q https://$GITPERM@github.com/CS3398-Changelings-Aye/Java_Gradle_Hello_World  --tags
 
-
+  
 deploy:
   provider: releases
   api_key:
     secure: $GITPERM
   file:
     - README.md
-    - hello_world_test_reports.tar.gz
-    - hello_world_executable_distributions.tar.gz
-  skip_cleanup: true
+    - hello_world_test_reports.tar.gz 
+    - hello_world_executable_distributions.tar.gz 
+  skip_cleanup: true  
   on:
     tags: false
     all_branches: true
